--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "gatsby-remark-smartypants": "^2.0.0-beta.1",
     "gatsby-source-filesystem": "^2.0.1-beta.1",
     "gatsby-transformer-remark": "^2.1.1-beta.1",
-    "gatsby-transformer-sharp": "^2.1.1-beta.1"
+    "gatsby-transformer-sharp": "^2.1.1-beta.1",
+    "netlify-cms": "^2.0.10"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.2",
