--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "2.0.0",
   "author": "Futoshi Iwashita <jaxx2104@gmail.com>",
   "dependencies": {
+    "extract-text-webpack-plugin": "^3.0.2",
     "gatsby": "^2.0.0-beta.1",
     "gatsby-image": "^2.0.0-beta.1",
     "gatsby-link": "^2.0.0-beta.1",
@@ -12,6 +13,7 @@
     "gatsby-plugin-google-analytics": "^2.0.0-beta.1",
     "gatsby-plugin-manifest": "^2.0.2-beta.1",
     "gatsby-plugin-netlify": "^2.0.0-beta.1",
+    "gatsby-plugin-netlify-cms": "^2.0.1",
     "gatsby-plugin-nprogress": "^2.0.0-beta.1",
     "gatsby-plugin-offline": "^2.0.0-beta.1",
     "gatsby-plugin-preact": "^2.0.0-beta.3",
