--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gatsby": "^2.0.0-beta.1",
     "gatsby-image": "^2.0.0-beta.1",
     "gatsby-link": "^2.0.0-beta.1",
+    "gatsby-paginate": "^1.0.16",
     "gatsby-plugin-catch-links": "^2.0.2-beta.1",
     "gatsby-plugin-feed": "^2.0.0-beta.1",
     "gatsby-plugin-google-analytics": "^2.0.0-beta.1",
