--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "gatsby-plugin-react-helmet": "^3.0.0-beta.1",
     "gatsby-plugin-react-next": "^2.0.1-13",
     "gatsby-plugin-sass": "2.0.0-beta.1",
-    "gatsby-plugin-sharp": "2.0.0-beta.1",
+    "gatsby-plugin-sharp": "^2.0.0-beta.1",
     "gatsby-plugin-sitemap": "^2.0.0-beta.1",
     "gatsby-plugin-twitter": "^2.0.0-beta.1",
     "gatsby-remark-copy-linked-files": "^2.0.0-beta.1",
@@ -30,7 +30,7 @@
     "gatsby-remark-smartypants": "^2.0.0-beta.1",
     "gatsby-source-filesystem": "^2.0.1-beta.1",
     "gatsby-transformer-remark": "^2.1.1-beta.1",
-    "gatsby-transformer-sharp": "^2.1.1-beta.1"
+    "gatsby-transformer-sharp": "^2.1.1-rc.2"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.2",
