--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "gatsby-remark-smartypants": "^2.0.0-beta.1",
     "gatsby-source-filesystem": "^2.0.1-beta.1",
     "gatsby-transformer-remark": "^2.1.1-beta.1",
-    "gatsby-transformer-sharp": "^2.1.1-rc.2"
+    "gatsby-transformer-sharp": "^2.1.1-rc.2",
+    "react-id-swiper": "^1.6.6"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.2",
