--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Futoshi Iwashita <jaxx2104@gmail.com>",
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
+    "fs": "0.0.1-security",
     "gatsby": "^2.0.0-beta.1",
     "gatsby-image": "^2.0.0-beta.1",
     "gatsby-link": "^2.0.0-beta.1",
@@ -31,7 +32,10 @@
     "gatsby-source-filesystem": "^2.0.1-beta.1",
     "gatsby-transformer-remark": "^2.1.1-beta.1",
     "gatsby-transformer-sharp": "^2.1.1-rc.2",
-    "react-id-swiper": "^1.6.6"
+    "net": "^1.0.2",
+    "open-graph-scraper": "^3.5.1",
+    "react-id-swiper": "^1.6.6",
+    "tls": "0.0.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.2",
