--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -27,7 +27,7 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "Youtube"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Link", name: "link", widget: "string"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Body", name: "body", widget: "markdown", required: false}
   - name: "oglink" # Used in routes, e.g., /admin/collections/blog
     label: "OGLink" # Used in the UI
     folder: "content/posts" # The path to the folder where the documents are stored
@@ -38,4 +38,4 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "OGLink"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Link", name: "link", widget: "string"}
-      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Body", name: "body", widget: "markdown", required: false}
