--- a/package.json
+++ b/package.json
@@ -6,34 +6,34 @@
   "dependencies": {
     "extract-text-webpack-plugin": "^3.0.2",
     "fs": "0.0.1-security",
-    "gatsby": "^2.0.0-beta.1",
-    "gatsby-image": "^2.0.0-beta.1",
-    "gatsby-link": "^2.0.0-beta.1",
+    "gatsby": "^2.0.0-rc.7",
+    "gatsby-image": "^2.0.0-rc.1",
+    "gatsby-link": "^2.0.0-rc.2",
     "gatsby-paginate": "^1.0.16",
-    "gatsby-plugin-catch-links": "^2.0.2-beta.1",
-    "gatsby-plugin-google-analytics": "^2.0.0-beta.1",
-    "gatsby-plugin-manifest": "^2.0.2-beta.1",
-    "gatsby-plugin-netlify": "^2.0.0-beta.1",
-    "gatsby-plugin-nprogress": "^2.0.0-beta.1",
-    "gatsby-plugin-offline": "^2.0.0-beta.1",
-    "gatsby-plugin-preact": "^2.0.0-beta.3",
-    "gatsby-plugin-react-helmet": "^3.0.0-beta.1",
+    "gatsby-plugin-catch-links": "^2.0.2-rc.1",
+    "gatsby-plugin-google-analytics": "^2.0.0-rc.1",
+    "gatsby-plugin-manifest": "^2.0.2-rc.1",
+    "gatsby-plugin-netlify": "^2.0.0-rc.1",
+    "gatsby-plugin-nprogress": "^2.0.0-rc.1",
+    "gatsby-plugin-offline": "^2.0.0-rc.2",
+    "gatsby-plugin-preact": "^2.0.0-rc.1",
+    "gatsby-plugin-react-helmet": "^3.0.0-rc.1",
     "gatsby-plugin-react-next": "^2.0.1-13",
     "gatsby-plugin-sass": "2.0.0-beta.1",
-    "gatsby-plugin-sharp": "^2.0.0-beta.1",
-    "gatsby-plugin-sitemap": "^2.0.0-beta.1",
-    "gatsby-plugin-twitter": "^2.0.0-beta.1",
-    "gatsby-remark-copy-linked-files": "^2.0.0-beta.1",
-    "gatsby-remark-images": "^2.0.1-beta.1",
-    "gatsby-remark-prismjs": "^3.0.0-beta.1",
-    "gatsby-remark-responsive-iframe": "^2.0.0-beta.1",
-    "gatsby-remark-smartypants": "^2.0.0-beta.1",
-    "gatsby-source-filesystem": "^2.0.1-beta.1",
+    "gatsby-plugin-sharp": "^2.0.0-rc.3",
+    "gatsby-plugin-sitemap": "^2.0.0-rc.1",
+    "gatsby-plugin-twitter": "^2.0.0-rc.1",
+    "gatsby-remark-copy-linked-files": "^2.0.0-rc.1",
+    "gatsby-remark-images": "^2.0.1-rc.1",
+    "gatsby-remark-prismjs": "^3.0.0-rc.2",
+    "gatsby-remark-responsive-iframe": "^2.0.0-rc.1",
+    "gatsby-remark-smartypants": "^2.0.0-rc.1",
+    "gatsby-source-filesystem": "^2.0.1-rc.1",
     "gatsby-transformer-remark": "^2.1.1-beta.1",
     "gatsby-transformer-sharp": "^2.1.1-rc.2",
     "net": "^1.0.2",
     "open-graph-scraper": "^3.5.1",
-    "react-id-swiper": "^1.6.6",
+    "react-id-swiper": "^1.6.7",
     "tls": "0.0.1"
   },
   "devDependencies": {
