--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "gatsby-remark-responsive-iframe": "^2.0.0-rc.1",
     "gatsby-remark-smartypants": "^2.0.0-rc.1",
     "gatsby-source-filesystem": "^2.0.1-rc.1",
-    "gatsby-transformer-open-graph": "^2.0.0-rc.3",
+    "gatsby-transformer-open-graph": "^2.0.0",
     "gatsby-transformer-remark": "^2.1.1-beta.1",
+    "gatsby-transformer-remote-image": "^2.0.0",
     "gatsby-transformer-sharp": "^2.1.1-rc.2",
     "net": "^1.0.2",
     "react-id-swiper": "^1.6.7",
