--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-link": "^2.0.0-rc.2",
     "gatsby-paginate": "^1.0.16",
     "gatsby-plugin-catch-links": "^2.0.2-rc.1",
+    "gatsby-plugin-feed": "^1.3.25",
     "gatsby-plugin-google-analytics": "^2.0.0-rc.1",
     "gatsby-plugin-manifest": "^2.0.2-rc.1",
     "gatsby-plugin-netlify": "^2.0.0-rc.1",
