--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -41,5 +41,5 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "OGLink"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Link", name: "link", widget: "string"}
-      - {label: "Remote Image", name: "remoteImage", widget: "string"}
+      - {label: "Remote Image", name: "remoteImage", widget: "string", required: false}
       - {label: "Body", name: "body", widget: "markdown", required: false}
