--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,6 +30,19 @@ collections:
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Link", name: "link", widget: "string"}
       - {label: "Body", name: "body", widget: "markdown", required: false}
+  - name: "Link" # Used in routes, e.g., /admin/collections/blog
+      label: "Link" # Used in the UI
+      folder: "content/posts" # The path to the folder where the documents are stored
+      filter: {field: "layout", value: "LinkPost"}
+      create: true # Allow users to create new documents in this collection
+      slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+      fields: # The fields for each document, usually in front matter
+        - {label: "Title", name: "title", widget: "string"}
+        - {label: "Layout", name: "layout", widget: "hidden", default: "LinkPost"}
+        - {label: "Publish Date", name: "date", widget: "datetime"}
+        - {label: "Link", name: "link", widget: "string"}
+        - {label: "Excerpt", name: "excerpt", widget: "string"}
+        - {label: "Body", name: "body", widget: "markdown", required: false}
   - name: "oglink" # Used in routes, e.g., /admin/collections/blog
     label: "OGLink" # Used in the UI
     folder: "content/posts" # The path to the folder where the documents are stored
